--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.11",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "motion": "^12.23.12",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
